--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -58,30 +58,39 @@
                 android:textColor="@color/black"
                 android:textSize="15sp" />
         </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilRePassword"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tilPassword"
+            app:passwordToggleDrawable="@drawable/bg_eye_checkbox"
+            app:passwordToggleEnabled="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etRePassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="请再次输入密码"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="250dp"
             android:layout_height="50dp"
-            android:layout_below="@+id/tilPassword"
+            android:layout_below="@+id/tilRePassword"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="25dp"
             android:background="@drawable/bg_common_button"
-            android:text="登录"
+            android:text="注册"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/tvRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btnLogin"
-            android:layout_alignEnd="@+id/btnLogin"
-            android:layout_alignRight="@+id/btnLogin"
-            android:layout_marginTop="15dp"
-            android:text="注册"
-            android:textColor="@color/common_blue"
-            android:textSize="16sp" />
 
 
     </RelativeLayout>
