--- a/baselibrary/src/main/res/values-v21/styles.xml
+++ b/baselibrary/src/main/res/values-v21/styles.xml
@@ -15,10 +15,10 @@
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
     </style>
 
-    <style name="Activity.Dialog" parent="Base.Activity.Dialog">
-        <item name="android:colorControlActivated">@color/red</item>
-        <item name="android:colorAccent">@color/red</item>
-        <item name="android:colorControlNormal">@color/text_black</item>
-    </style>
+    <!--<style name="Activity.Dialog" parent="Base.Activity.Dialog">-->
+        <!--<item name="android:colorControlActivated">@color/red</item>-->
+        <!--<item name="android:colorAccent">@color/red</item>-->
+        <!--<item name="android:colorControlNormal">@color/text_black</item>-->
+    <!--</style>-->
 
 </resources>
