--- a/baselibrary/src/main/res/values-v23/styles.xml
+++ b/baselibrary/src/main/res/values-v23/styles.xml
@@ -16,10 +16,10 @@
 
     </style>
 
-    <style name="Activity.Dialog" parent="Base.Activity.Dialog">
-        <item name="android:colorControlActivated">@color/red</item>
-        <item name="android:colorAccent">@color/color_accent</item>
-        <item name="android:colorControlNormal">@color/text_black</item>
-    </style>
+    <!--<style name="Activity.Dialog" parent="Base.Activity.Dialog">-->
+        <!--<item name="android:colorControlActivated">@color/red</item>-->
+        <!--<item name="android:colorAccent">@color/color_accent</item>-->
+        <!--<item name="android:colorControlNormal">@color/text_black</item>-->
+    <!--</style>-->
 
 </resources>
