--- a/baselibrary/src/main/res/values/colors.xml
+++ b/baselibrary/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <!--                    -禁止修改(主题变更除外)               -->
     <color name="common_blue">#4F9AFE</color>
 
-    <color name="red">#FF3737</color>
+    <!--<color name="red">#FF3737</color>-->
     <color name="white">#ffffff</color>
     <color name="black">#ff000000</color>
     <color name="theme_blue">#ff028be6</color>
@@ -55,7 +55,7 @@
 
 
     <color name="app_base_bg_color">#F1F1F1</color>
-    <color name="app_base_color">#FFFF4444</color>
+    <!--<color name="app_base_color">#FFFF4444</color>-->
     <color name="we_chat_bg_grey">#eaeaea</color>
 
 </resources>
