--- a/baselibrary/src/main/res/values/styles.xml
+++ b/baselibrary/src/main/res/values/styles.xml
@@ -73,7 +73,7 @@
     </style>
 
     <style name="MyDrawerArrowToggle" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@color/red</item>
+        <item name="color">@color/black</item>
         <item name="barLength">28dp</item>
         <item name="gapBetweenBars">3dp</item>
         <item name="drawableSize">50dp</item>
