--- a/app/src/main/res/menu/home_bottom_navigation.xml
+++ b/app/src/main/res/menu/home_bottom_navigation.xml
@@ -2,24 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/icon_home_un_select"
+        android:icon="@drawable/ic_home"
         android:title="@string/s_home" />
 
     <item
         android:id="@+id/navigation_project"
-        android:icon="@drawable/icon_ground_un_select"
+        android:icon="@drawable/ic_project"
         android:title="@string/s_project" />
     <item
         android:id="@+id/navigation_ground"
-        android:icon="@drawable/icon_ground_un_select"
+        android:icon="@drawable/ic_ground"
         android:title="@string/s_ground" />
 
     <item
         android:id="@+id/navigation_tencent"
-        android:icon="@drawable/icon_tencent_un_select"
+        android:icon="@drawable/ic_tencent"
         android:title="@string/s_tencent" />
     <item
         android:id="@+id/navigation_me"
-        android:icon="@drawable/icon_me_un_select"
+        android:icon="@drawable/ic_me"
         android:title="@string/s_me" />
 </menu>
