--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/tvTitle"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="6dp"
         android:text="WanAndroid"
