--- a/app/src/main/res/layout/fragment_home_first.xml
+++ b/app/src/main/res/layout/fragment_home_first.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/srlRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -15,20 +16,63 @@
 
             <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="215dp">
 
-                <TextView
-                    android:id="@+id/tvTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="首页"
-                    android:textColor="@color/common_blue"
-                    android:textSize="20sp" />
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/vpBanner"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:background="@color/color_common_bg" />
 
-                <!--<androidx.viewpager2.widget.ViewPager2-->
-                <!--android:id="@+id/vpBanner"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="200dp" />-->
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                    app:title=""
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp">
+
+                        <View
+                            android:id="@+id/vPlaceHolder"
+                            android:layout_width="match_parent"
+                            android:layout_height="15dp"
+                            android:background="@drawable/home_place_holder_corner" />
+
+                        <ImageView
+                            android:id="@+id/iv_article"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:layout_below="@+id/vPlaceHolder"
+                            android:layout_marginStart="@dimen/padding_left"
+                            android:layout_marginLeft="@dimen/padding_left"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="@dimen/padding_right"
+                            android:layout_marginRight="@dimen/padding_right"
+                            android:layout_marginBottom="5dp"
+                            android:src="@drawable/ic_article" />
+
+                        <TextView
+                            android:id="@+id/tvTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/vPlaceHolder"
+                            android:layout_marginStart="@dimen/padding_left"
+                            android:layout_marginLeft="@dimen/padding_left"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:layout_toEndOf="@+id/iv_article"
+                            android:layout_toRightOf="@+id/iv_article"
+                            android:text="首页"
+                            android:textColor="@color/common_blue"
+                            android:textSize="20sp" />
+                    </RelativeLayout>
+
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
             </com.google.android.material.appbar.AppBarLayout>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
@@ -36,6 +80,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvContent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </LinearLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
