--- a/app/src/main/res/layout/item_home_first_banner.xml
+++ b/app/src/main/res/layout/item_home_first_banner.xml
@@ -8,23 +8,16 @@
         android:id="@+id/bannerImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:scaleType="fitXY"
         tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/bannerTitle"
+    <Button
+        android:id="@+id/tvBannerTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/bannerImage"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@id/bannerImage"
         android:background="@color/black_trans"
-        android:gravity="bottom"
-        android:padding="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/green"
         android:textSize="16sp"
         tools:text="@string/app_name" />
 </RelativeLayout>
