--- a/app/src/main/res/layout/fragment_home_first.xml
+++ b/app/src/main/res/layout/fragment_home_first.xml
@@ -5,83 +5,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@null"
+        android:layout_height="wrap_content">
 
-        <!--<androidx.coordinatorlayout.widget.CoordinatorLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-
-        <!--<com.google.android.material.appbar.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="215dp">-->
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vpBanner"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:background="@color/color_common_bg"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            android:id="@+id/ablLayout"
+            android:background="@null"
+            android:layout_height="wrap_content">
 
-        <!--<com.google.android.material.appbar.CollapsingToolbarLayout-->
-        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
-        <!--app:title=""-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.99"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:title="">
 
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/vpBanner"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/color_common_bg" />
 
-        <!---->
-        <!--</com.google.android.material.appbar.CollapsingToolbarLayout>-->
-        <!--</com.google.android.material.appbar.AppBarLayout>-->
-        <!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:background="@color/white">
-
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
             <View
                 android:id="@+id/vPlaceHolder"
                 android:layout_width="match_parent"
-                android:layout_height="15dp"
-                android:background="@drawable/home_place_holder_corner" />
-
-            <ImageView
-                android:id="@+id/iv_article"
-                android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:layout_below="@+id/vPlaceHolder"
-                android:layout_marginStart="@dimen/padding_left"
-                android:layout_marginLeft="@dimen/padding_left"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="@dimen/padding_right"
-                android:layout_marginRight="@dimen/padding_right"
-                android:layout_marginBottom="5dp"
-                android:src="@drawable/ic_article" />
+                android:background="@drawable/home_place_holder_corner" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginBottom="5dp">
 
-            <TextView
-                android:id="@+id/tvTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/vPlaceHolder"
-                android:layout_marginStart="@dimen/padding_left"
-                android:layout_marginLeft="@dimen/padding_left"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_toEndOf="@+id/iv_article"
-                android:layout_toRightOf="@+id/iv_article"
-                android:text="首页"
-                android:textColor="@color/common_blue"
-                android:textSize="20sp" />
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/iv_article"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="@dimen/padding_left"
+                    android:layout_marginLeft="@dimen/padding_left"
+                    android:layout_marginEnd="@dimen/padding_right"
+                    android:layout_marginRight="@dimen/padding_right"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_article" />
+
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/padding_left"
+                    android:layout_marginLeft="@dimen/padding_left"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/iv_article"
+                    android:layout_toRightOf="@+id/iv_article"
+                    android:text="首页"
+                    android:textColor="@color/common_blue"
+                    android:textSize="20sp" />
+            </RelativeLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-    </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
