--- a/app/src/main/res/layout/item_home_first_banner.xml
+++ b/app/src/main/res/layout/item_home_first_banner.xml
@@ -11,13 +11,19 @@
         android:scaleType="fitXY"
         tools:ignore="ContentDescription" />
 
-    <Button
+    <TextView
         android:id="@+id/tvBannerTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/bannerImage"
         android:background="@color/black_trans"
-        android:textColor="@color/green"
+        android:paddingStart="@dimen/padding_left"
+        android:paddingLeft="@dimen/padding_left"
+        android:paddingTop="10dp"
+        android:paddingEnd="@dimen/padding_right"
+        android:paddingRight="@dimen/padding_right"
+        android:paddingBottom="10dp"
+        android:textColor="@color/white"
         android:textSize="16sp"
         tools:text="@string/app_name" />
 </RelativeLayout>
