--- a/app/src/main/res/layout/fragment_home_first.xml
+++ b/app/src/main/res/layout/fragment_home_first.xml
@@ -8,20 +8,16 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:background="@null"
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
             android:id="@+id/ablLayout"
-            android:background="@null"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.99"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:title="">
 
@@ -29,14 +25,19 @@
                     android:id="@+id/vpBanner"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/color_common_bg" />
+                    android:background="@color/color_common_bg"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="1" />
+
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
+
             <View
                 android:id="@+id/vPlaceHolder"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="15dp"
                 android:background="@drawable/home_place_holder_corner" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
@@ -46,20 +47,20 @@
                     android:id="@+id/iv_article"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
+                    android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/padding_left"
                     android:layout_marginLeft="@dimen/padding_left"
                     android:layout_marginEnd="@dimen/padding_right"
                     android:layout_marginRight="@dimen/padding_right"
-                    android:layout_centerVertical="true"
                     android:src="@drawable/ic_article" />
 
                 <TextView
                     android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/padding_left"
                     android:layout_marginLeft="@dimen/padding_left"
-                    android:layout_centerVertical="true"
                     android:layout_toEndOf="@+id/iv_article"
                     android:layout_toRightOf="@+id/iv_article"
                     android:text="首页"
