--- a/baselibrary/src/main/res/layout/base_fragment_and_activity.xml
+++ b/baselibrary/src/main/res/layout/base_fragment_and_activity.xml
@@ -3,6 +3,7 @@
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_common_bg"
     android:orientation="vertical">
 
     <include layout="@layout/layout_common_title" />
