--- a/app/src/main/res/layout/fragment_home_first.xml
+++ b/app/src/main/res/layout/fragment_home_first.xml
@@ -13,34 +13,38 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/ablLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/transparent">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:background="@color/transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:title="">
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/vpBanner"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/color_common_bg"
+                    android:layout_height="250dp"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="1" />
 
-
             </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-            <View
-                android:id="@+id/vPlaceHolder"
-                android:layout_width="match_parent"
-                android:layout_height="15dp"
-                android:background="@drawable/home_place_holder_corner" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-15dp"
+            android:background="@drawable/home_place_holder_corner"
+            android:orientation="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="5dp">
 
                 <ImageView
@@ -67,13 +71,13 @@
                     android:textColor="@color/common_blue"
                     android:textSize="20sp" />
             </RelativeLayout>
-        </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvContent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvContent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
