--- a/app/src/main/res/layout/fragment_home_first.xml
+++ b/app/src/main/res/layout/fragment_home_first.xml
@@ -31,53 +31,53 @@
                     app:layout_collapseParallaxMultiplier="1" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-15dp"
+                android:background="@drawable/home_place_holder_corner"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="5dp">
+
+                    <ImageView
+                        android:id="@+id/iv_article"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/padding_left"
+                        android:layout_marginLeft="@dimen/padding_left"
+                        android:src="@drawable/ic_article" />
+
+                    <TextView
+                        android:id="@+id/tvTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/padding_left"
+                        android:layout_marginLeft="@dimen/padding_left"
+                        android:layout_toEndOf="@+id/iv_article"
+                        android:layout_toRightOf="@+id/iv_article"
+                        android:text="文章列表"
+                        android:textColor="@color/common_blue"
+                        android:textSize="@dimen/text_1"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+
+
+            </LinearLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvContent"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-15dp"
-            android:background="@drawable/home_place_holder_corner"
-            android:orientation="vertical"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="5dp">
-
-                <ImageView
-                    android:id="@+id/iv_article"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/padding_left"
-                    android:layout_marginLeft="@dimen/padding_left"
-                    android:layout_marginEnd="@dimen/padding_right"
-                    android:layout_marginRight="@dimen/padding_right"
-                    android:src="@drawable/ic_article" />
-
-                <TextView
-                    android:id="@+id/tvTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/padding_left"
-                    android:layout_marginLeft="@dimen/padding_left"
-                    android:layout_toEndOf="@+id/iv_article"
-                    android:layout_toRightOf="@+id/iv_article"
-                    android:text="首页"
-                    android:textColor="@color/common_blue"
-                    android:textSize="20sp" />
-            </RelativeLayout>
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvContent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
