--- a/baselibrary/src/main/res/layout/layout_common_title.xml
+++ b/baselibrary/src/main/res/layout/layout_common_title.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/common_toolbar"
     android:layout_width="match_parent"
     android:layout_height="44dp"
@@ -9,6 +10,11 @@
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
+    <FrameLayout
+        android:id="@+id/fl_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_center_title"
@@ -20,9 +26,9 @@
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
-        android:text="标题"
         android:textColor="@color/color_text_primary"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        tools:text="标题" />
 
     <TextView
         android:id="@+id/tv_right"
@@ -32,10 +38,10 @@
         android:layout_gravity="end"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="取消"
         android:textColor="@color/color_text_primary"
         android:textSize="16sp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:text="取消" />
 
     <ImageView
         android:id="@+id/iv_right"
