项目数据添加

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,16 @@
         <item name="android:windowBackground">@null</item>
         <item name="android:windowDisablePreview">true</item>
     </style>
+
+    <style name="common_tab_layout" >
+        <item name="tabIndicatorColor">@color/common_blue</item>
+        <item name="tabIndicatorHeight">3dp</item>
+        <item name="tabIndicatorFullWidth">false</item>
+        <item name="tabSelectedTextColor">@color/common_blue</item>
+        <item name="tabTextAppearance">@style/SecondTitleTabLayoutStyleTextAppearance</item>
+        <item name="tabTextColor">@color/green</item>
+    </style>
+    <style name="SecondTitleTabLayoutStyleTextAppearance">
+        <item name="android:textSize">15sp</item>
+    </style>
 </resources>
